<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/t"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarPartyInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="@color/colorTransparent"
        app:layout_constraintBottom_toTopOf="@+id/switchTinderMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/include"
            layout="@layout/party_info"
            android:layout_width="412dp"
            android:layout_height="160dp"
            android:background="#C8583696"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:layout_editor_absoluteY="-2dp"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/textViewPeopleGoing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/people_that_are_going"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFindBuddy"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_below="@+id/listViewMembers"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:background="@drawable/round_btn"
            android:backgroundTint="#FC86A8E7"
            android:enabled="false"
            android:onClick="findBuddy"
            android:text="@string/find_buddy"
            android:textColor="@color/colorBlack"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnJoin"
            app:layout_constraintEnd_toStartOf="@+id/btnJoin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_below="@+id/listViewMembers"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/btnFindBuddy"
            android:background="@drawable/round_btn"
            android:backgroundTint="#86A8E7"
            android:onClick="joinParty"
            android:text="@string/join"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFindBuddy"
            app:layout_constraintTop_toBottomOf="@+id/listViewMembers" />

        <include
            android:id="@+id/listViewMembers"
            layout="@layout/activity_party_info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/textViewPeopleGoing"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/border_ui"
            android:divider="@color/colorBlack"
            android:dividerHeight="5dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFindBuddy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPeopleGoing"
            app:layout_constraintVertical_bias="1.0" />

        <Switch
            android:id="@+id/switchTinderMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/tinder_mode"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <FrameLayout
            android:id="@+id/frameLayoutTinderMode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btnFindBuddy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPeopleGoing"
            app:layout_constraintVertical_bias="1.0">


        </FrameLayout>

        <!--    <ListView-->
        <!--        android:id="@+id/listViewMembers"-->
        <!--        android:layout_width="357dp"-->
        <!--        android:layout_height="274dp"-->
        <!--        android:layout_below="@+id/textView2"-->
        <!--        android:layout_marginStart="24dp"-->
        <!--        android:layout_marginTop="16dp"-->
        <!--        android:background="#673AB7" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>