<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".Activities.AddPartyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewCreateParty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="Create your party"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/dividerHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCreateParty" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextLocation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerPartyType">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextLocation1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_location_on_black_24dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextAmountOfPeople"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/amount_of_people"
                    android:inputType="number"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextLocation">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAmountOfPeople1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_people_black_24dp"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextPartyName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/party_name"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCreateParty">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPartyName1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/spinnerPartyType"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/party_name"
                    app:boxBackgroundColor="@color/colorWhite"
                    android:background="@color/colorWhite"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPartyName" >


                    <Spinner
                        android:id="@+id/spinnerPartyType1"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:spinnerMode="dialog"
/>
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextDescription"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textAlignment="center"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewStartTime">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDescription1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_description_black_24dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imageButtonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_highlight"
                    android:onClick="addParty"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
                    app:srcCompat="@drawable/ic_check_black_24dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/textViewCdate"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/date"
                    android:onClick="showDatePicker"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textSize="18sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_date_range_black_24dp"
                    app:iconTint="@color/colorBlue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextAmountOfPeople" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/textViewStartTime"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/starttime"
                    android:onClick="showTimePicker"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textSize="18sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_access_time_black_24dp"
                    app:iconTint="@color/colorBlue"
                    app:layout_constraintEnd_toStartOf="@+id/textViewEndTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCdate" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/textViewEndTime"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/endtime"
                    android:onClick="showTimePicker"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textSize="18sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_access_time_black_24dp"
                    app:iconTint="@color/colorBlue"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewStartTime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewStartTime"
                    app:layout_constraintTop_toTopOf="@+id/textViewStartTime"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>