<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/t"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrantLayoutFindParty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <!--        <EditText-->
            <!--            android:id="@+id/editSearchParties"-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="40dp"-->
            <!--            android:layout_marginStart="4dp"-->
            <!--            android:layout_marginTop="8dp"-->
            <!--            android:layout_marginEnd="4dp"-->
            <!--            android:autofillHints=""-->
            <!--            android:background="@drawable/round_tab_btn"-->
            <!--            android:ems="10"-->
            <!--            android:hint="@string/search_party"-->
            <!--            android:inputType="textPersonName"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintHorizontal_bias="0.0"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="parent" />-->

            <com.mancj.materialsearchbar.MaterialSearchBar
                android:id="@+id/searchBar"
                style="@style/MaterialSearchBarLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                app:mt_hint="Search"

                app:mt_maxSuggestionsCount="10"
                app:mt_placeholder="Search party"
                app:mt_searchBarColor="@color/colorWhite" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:keepScreenOn="false"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchBar">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupDateFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:chipSpacingHorizontal="8dp"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipFilter"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:checkedIconEnabled="false"
                        app:chipBackgroundColor="@color/chip_color"
                        app:chipIcon="@drawable/ic_filter_list_black_24dp"
                        app:chipIconVisible="true"
                        app:iconEndPadding="-15dp"
                        app:rippleColor="@color/colorDarkGray" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipToday"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:checkedIconEnabled="false"
                        app:chipBackgroundColor="@color/chip_color"
                        app:chipIcon="@drawable/ic_today_black_24dp"
                        app:chipIconVisible="true"
                        app:rippleColor="@color/colorDarkGray" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipTomorrow"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomorrow"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:checkedIconEnabled="false"
                        app:chipBackgroundColor="@color/chip_color"
                        app:chipIcon="@drawable/ic_today_black_24dp"
                        app:chipIconVisible="true"
                        app:rippleColor="@color/colorDarkGray" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipWeek"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/week"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:checkedIconEnabled="false"
                        app:chipBackgroundColor="@color/chip_color"
                        app:chipIcon="@drawable/ic_view_week_black_24dp"
                        app:chipIconVisible="true"
                        app:rippleColor="@color/colorDarkGray" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDate"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:checkedIconEnabled="false"
                        app:chipBackgroundColor="@color/chip_color"
                        app:chipIcon="@drawable/ic_date_range_black_24dp"
                        app:chipIconVisible="true"
                        app:rippleColor="@color/colorDarkGray" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewParties"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>